I created a mega update It adds links to socials and place where you can put your ip and Subnautica:Below Zero path

--- a/LauncherSubnauticaBZMultiplayer/Properties/strings.pl.resx
+++ b/LauncherSubnauticaBZMultiplayer/Properties/strings.pl.resx
@@ -132,6 +132,12 @@
   <data name="linkstext" xml:space="preserve">
     <value>Linki:</value>
   </data>
+  <data name="pathlb" xml:space="preserve">
+    <value>Ścieżka gry:</value>
+  </data>
+  <data name="savebtn" xml:space="preserve">
+    <value>Zapisz ustawienia</value>
+  </data>
   <data name="servertab" xml:space="preserve">
     <value>Serwer</value>
   </data>
